--- a/sample/package.xml
+++ b/sample/package.xml
@@ -36,6 +36,7 @@ limitations under the License.
   <build_depend>cv_bridge</build_depend>
   <build_depend>object_msgs</build_depend>
   <build_depend>realsense2</build_depend>
+  <build_depend>openvino_common</build_depend>
 
   <exec_depend>rosidl_default_runtime</exec_depend>
   <exec_depend>builtin_interfaces</exec_depend>
