--- a/vino_param_lib/package.xml
+++ b/vino_param_lib/package.xml
@@ -29,6 +29,8 @@ limitations under the License.
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <build_depend>yaml_cpp_vendor</build_depend>
+  <build_depend>yaml_cpp_vendor</build_depend>
+  <build_depend>openvino_common</build_depend>
 
   <exec_depend>yaml_cpp_vendor</exec_depend>
 
