--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,6 +22,7 @@ jobs:
 
     # install ros2 foxy
     - name: Setup ROS environment
-      uses: ros-tooling/setup-ros@0.1.1
+    - uses: ros-tooling/setup-ros@0.1.1
       with:
         required-ros-distributions: foxy
+    - run: "source /opt/ros/foxy/setup.bash && ros2 run --help"
